# astral-cassini

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTERVIEW_PREP.docx  INTERVIEW_PREP.md  PRO_HR_Implementation_Plan.docx  README.md  SECURITY.md  TECH_STACK.md  docker-compose.direct-api.yml  docker-compose.yml  package-lock.json  package.json  pip_audit_out.json  render.yaml  run_all_tests.ps1  ssh_out.txt  ssh_out2.txt  verify_new_features.py
backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  check_db.py  debug_api.py  e2e_alternative_paths_test.py  e2e_clean.txt  e2e_full_automation.py  e2e_full_test.py  e2e_out_v3.txt  e2e_output.txt  fetch_state.py  fly.toml  inspect_db.py  migrate_db.py  mypy-full.ini  pipeline_audit.py  pyproject.toml  pyrightconfig.json  repair_db.py  requirements-dev.txt  requirements-tools.txt  requirements.txt  reset.py  run_real_pipeline.py  seed_users.py  start.ps1  test_agents_full.py  test_api.py  test_graph_standalone.py  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260409_0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: coordinator.py  decider.py  interviewer.py  jd_architect.py  jd_critic.py  liaison.py  offer_generator.py  (+7 more)
backend/data/: agenthire.db  mock_candidates.json  prohr.db  workflows.db-shm  workflows.db-wal
backend/scripts/: clean_dataset.py  dataset_common.py  export_dataset.py  import_dataset.py  quality_report.py  seed_demo_complete.py  seed_full_demo.py  seed_pipelines.py  validate_dataset.py
backend/tests/: conftest.py  e2e_pipeline_test.py
(+134 files in other folders)
